@@ -3,6 +3,7 @@
  - Handle spaces and single quotes in `connection::connection_string()` (#992)
  - _I said,_ can't pass parameters to streaming query.  Remove support. (#997)
  - Fix pkgconfig for static linkage; use config module `libpq`. (#999)
+ - Made `row::as_tuple()` public. (#1003)
 7.10.1
  - Fix string conversion buffer budget for arrays containing nulls. (#921)
  - Remove `-fanalyzer` option again; gcc is still broken.
